--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+.vs/
+.bin/
+.obj/
+*.vcxproj
+*.vcxproj.filters
+*.sln
